@startuml

title __MISC. ADAPTER's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    class OwnerListItem {
      - ownerPic : Bitmap
      - ownerUsername : String
      - ownerId : String
      - isbn : String
      - status : String
      {static} + getComparator()
      + OwnerListItem()
      + OwnerListItem()
      + getOwnerPic()
      + setOwnerPic()
      + getOwnerUsername()
      + setOwnerUsername()
      + getOwnerId()
      + setOwnerId()
      + getIsbn()
      + setIsbn()
      + getStatus()
      + setStatus()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    class UserListItem {
      - borrowerPic : Drawable
      - borrowerUsername : String
      - isbn : String
      - borrowerId : String
      + UserListItem()
      + UserListItem()
      + getBorrowerPic()
      + setBorrowerPic()
      + getBorrowerUsername()
      + setBorrowerUsername()
      + getIsbn()
      + setIsbn()
      + getBorrowerId()
      + setBorrowerId()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class OwnerRecyclerViewAdapter {
      - mContext : Context
      - mOwnerListItem : List<OwnerListItem>
      + OwnerRecyclerViewAdapter()
      + onCreateViewHolder()
      + onBindViewHolder()
      + getItemCount()
      - dataBundler()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class TabsAdapter {
      - mFragmentList : List<Fragment>
      - mFragmentTitleList : List<String>
      + TabsAdapter()
      + addFragment()
      + getPageTitle()
      + getItem()
      + getCount()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class UserRecyclerViewAdapter {
      - mContext : Context
      - mUserListItem : List<UserListItem>
      - mListener : UserRecyclerListener
      + UserRecyclerViewAdapter()
      + onCreateViewHolder()
      + onBindViewHolder()
      + getItemCount()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    interface UserRecyclerListener {
      {abstract} + messageClick()
      {abstract} + userClick()
      {abstract} + ellipsesClick()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.holder {
      class OwnerViewHolder {
        + itemOwner : RelativeLayout
        + ownerUsername : TextView
        + ownerPic : ImageView
        + statusIcon : ImageView
        + OwnerViewHolder()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.model {
    package ca.ualberta.CMPUT3012019T02.alexandria.model.holder {
      class UserViewHolder {
        + itemUser : RelativeLayout
        + ivUserPic : ImageView
        + btUser : Button
        + ibtMessage : ImageButton
        + ibtEllipses : ImageButton
        - listenerRef : WeakReference<UserRecyclerListener>
        + UserViewHolder()
        + onClick()
      }
    }
  }
}


OwnerViewHolder -up-|> ViewHolder
UserViewHolder -up-|> OnClickListener
UserViewHolder -up-|> ViewHolder
OwnerRecyclerViewAdapter -up-|> Adapter
OwnerRecyclerViewAdapter "1" -- "*" OwnerViewHolder : creates >
TabsAdapter -up-|> FragmentPagerAdapter
UserRecyclerViewAdapter -up-|> Adapter
UserRecyclerViewAdapter "1" -- "*" UserViewHolder : creates >
UserRecyclerViewAdapter +-up- UserRecyclerListener
UserRecyclerViewAdapter o-- "1" UserRecyclerListener
UserRecyclerViewAdapter o-- "*" UserListItem
OwnerRecyclerViewAdapter o-- "*" OwnerListItem


right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
